# AOC2025

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
include/: utils.hpp
inputs/: day0.txt
src/: day0.cpp  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
